shift polaroid date position and fix overlay background scroll error pt 3131414

--- a/_sass/includes/photography.scss
+++ b/_sass/includes/photography.scss
@@ -116,4 +116,8 @@
     
     }
 
+    .photo-date {
+        margin: 0 !important;
+    }
+
 }
